fixed some issues on test implementation